# c-make-demo

./: .gitignore  CMakeLists.txt  README.md
demo0-template/: main.cpp
demo1/: main.cpp
demo10-get-Windows-Kits-version/: CMakeLists.txt  main.cpp
demo11-http/: CMakeLists.txt  main.cpp
demo12-progress/: CMakeLists.txt  main.cpp
demo13-getCpuId/: Readme.txt  main.cpp
demo14-checkNETCoreRuntime/: CMakeLists.txt  main.cpp
demo15-c-data-type/: main.cpp
demo16-cmdline-ArgsParser-clipp/: CMakeLists.txt  clipp.h  main.cpp  readme.txt
demo2-operator=/: CMakeLists.txt  main.cpp
demo3-nodeTest/: index.js  main.cpp
demo4-wstring-string/: CMakeLists.txt  main.cpp
demo5-jsoncpp/: CMakeLists.txt  checkjson.json  main.cpp
demo5-jsoncpp/json/: readme.txt
demo6-sqlite/sqlite3-ConsoleApplication/: CMakeLists.txt  sqlite3-ConsoleApplication.cpp  sqlite3-ConsoleApplication.sln  sqlite3-ConsoleApplication.vcxproj  sqlite3-ConsoleApplication.vcxproj.filters
demo6-sqlite/sqlite3-demo/: CMakeLists.txt  main.cpp  readme.md
demo6-sqlite/sqlite3-demo/sqlite3/: install-sqlite3.sh  readme.txt  sqlite3.pc
demo7-command-line-tools/: CMakeLists.txt  main.cpp
demo8-uepackage/: CMakeLists.txt  Format.h  main.cpp
demo9-cmd/: CMakeLists.txt  main.cpp
warning/warning1-1G-Hello-world/: main.cpp  readme.txt
